[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akinfra-shared"
dynamic = ["version"]
description = ''
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]

dependencies = [
    "minijinja",
    "pyinfra",
]

[tool.hatch.version]
path = "src/akinfra_shared/__about__.py"
